--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,31 @@ body {
   background-color: #eaeaea;
 }
 
+.loader {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation-name: loader-block;
+  animation-delay: 3s;
+}
+.loader img {
+  width: 25%;
+}
+
+@keyframes loader-block {
+  0% {
+    display: flex;
+  }
+  100% {
+    display: none;
+  }
+}
 .main {
   display: flex;
   flex-direction: column;
@@ -86,6 +111,11 @@ body {
   font-size: 16px;
   font-weight: 400;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+  transition: all 300ms ease-in-out;
+}
+.main .main__reservation__button:hover, .main .main__reservation__button:active {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356dc -5.2%, #ff79da 110.74%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
 }
 .main .main__fonctionnement {
   background: white;
@@ -190,22 +220,26 @@ body {
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon {
   font-size: 20px;
+  position: relative;
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon--solid {
   color: #9356dc;
-  display: none;
+  position: absolute;
+  right: 25px;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon--border {
-  display: block;
-}
-.main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon i {
-  transition: display;
+  position: absolute;
+  opacity: 1;
+  right: 25px;
+  transition: opacity 300ms ease-in-out;
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon:hover .main__restaurants__list__article__footer__icon--solid {
-  display: block;
+  opacity: 1;
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__icon:hover .main__restaurants__list__article__footer__icon--border {
-  display: none;
+  opacity: 0;
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article .main__restaurants__list__article__footer .main__restaurants__list__article__footer__text {
   display: flex;
@@ -324,7 +358,12 @@ body {
   font-size: 16px;
   font-weight: 400;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+  transition: all 300ms ease-in-out;
   align-self: center;
+}
+.main .main__menu .main__menu__button:hover, .main .main__menu .main__menu__button:active {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356dc -5.2%, #ff79da 110.74%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
 }
 
 /*# sourceMappingURL=style.css.map */
