--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -17,5 +17,17 @@
     font-size: 16px;
     font-weight: 400;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 25%);
+
+    transition: all 300ms ease-in-out;
+      &:hover,
+      &:active {
+        background: linear-gradient(
+            0deg,
+            rgba(255, 255, 255, 0.15) 0%,
+            rgba(255, 255, 255, 0.15) 100%
+          ),
+          linear-gradient(201deg, #9356dc -5.2%, #ff79da 110.74%);
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+      }
   }
   
