--- a/assets/style.css
+++ b/assets/style.css
@@ -62,21 +62,89 @@ body {
   position: fixed;
   z-index: 99;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  animation-name: loader-block;
-  animation-delay: 3s;
+  gap: 10px;
+  animation-name: loader;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
 }
-.loader img {
-  width: 25%;
+.loader .point {
+  width: 20px;
+  height: 20px;
+  background-color: #9356dc;
+  border-radius: 10px;
+}
+.loader .point:nth-of-type(1) {
+  animation-name: aller-retour;
+  animation-duration: 1000ms;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+.loader .point:nth-of-type(3) {
+  background-color: red;
+}
+.loader .point:nth-of-type(2) {
+  background-color: #ae80e5;
+  animation-name: rotation1;
+  animation-duration: 130ms;
+  animation-timing-function: ease-in-out;
+  animation-delay: 200ms;
+  animation-fill-mode: forwards;
+}
+.loader .point:nth-of-type(3) {
+  background-color: #bc95e9;
+  animation-name: rotation1;
+  animation-duration: 130ms;
+  animation-timing-function: ease-in-out;
+  animation-delay: 400ms;
+  animation-fill-mode: forwards;
+}
+.loader .point:nth-of-type(4) {
+  background-color: #c9abee;
+  animation-name: rotation1;
+  animation-duration: 130ms;
+  animation-timing-function: ease-in-out;
+  animation-delay: 600ms;
+  animation-fill-mode: forwards;
+}
+.loader .point:nth-of-type(5) {
+  background-color: #d7c0f2;
+  animation-name: rotation1;
+  animation-duration: 130ms;
+  animation-timing-function: ease-in-out;
+  animation-delay: 800ms;
+  animation-fill-mode: forwards;
 }
 
-@keyframes loader-block {
-  0% {
+@keyframes rotation1 {
+  from {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-15px, -30px);
+  }
+  to {
+    transform: translate(-30px, 0px);
+  }
+}
+@keyframes aller-retour {
+  from {
+    transform: translateX(0);
+    background-color: #9356dc;
+  }
+  to {
+    transform: translateX(120px);
+    background-color: white;
+  }
+}
+@keyframes loader {
+  from {
     display: flex;
   }
-  100% {
+  to {
     display: none;
   }
 }
@@ -111,7 +179,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
-  transition: all 300ms ease-in-out;
+  transition: background 300ms ease-in-out, box-shadow 300ms ease-in-out;
 }
 .main .main__reservation__button:hover, .main .main__reservation__button:active {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356dc -5.2%, #ff79da 110.74%);
@@ -271,6 +339,31 @@ body {
   box-shadow: none;
 }
 
+@keyframes commande {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes commande-etape {
+  from {
+    transform: translateY(-40px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  to {
+    transform: translateY(0);
+  }
+}
 .main {
   width: 100%;
   background: #f6f6f6;
@@ -309,6 +402,19 @@ body {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  animation-name: commande;
+  animation-duration: 1500ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+.main .main__menu .main__menu__commande:nth-of-type(1) {
+  animation-delay: 500ms;
+}
+.main .main__menu .main__menu__commande:nth-of-type(2) {
+  animation-delay: 1000ms;
+}
+.main .main__menu .main__menu__commande:nth-of-type(3) {
+  animation-delay: 1500ms;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__header {
   display: flex;
@@ -325,10 +431,33 @@ body {
   width: 40px;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article {
-  padding: 15px;
   background: white;
   border-radius: 15px;
   box-shadow: 0px 4.01149px 15.0431px 0px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+.main .main__menu .main__menu__commande .main__menu__commande__article > * {
+  padding: 15px;
+}
+.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main {
+  width: 100%;
+}
+.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main:hover + .main__menu__commande__article__aside {
+  margin-right: 0;
+}
+.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside {
+  background-color: #99e2d0;
+  border-radius: 0 15px 15px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: -46px;
+  transition: margin-right 300ms ease-in-out;
+}
+.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside i {
+  color: white;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__title {
   font-size: 18px;
@@ -358,7 +487,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
-  transition: all 300ms ease-in-out;
+  transition: background 300ms ease-in-out, box-shadow 300ms ease-in-out;
   align-self: center;
 }
 .main .main__menu .main__menu__button:hover, .main .main__menu .main__menu__button:active {
