--- a/assets/style.css
+++ b/assets/style.css
@@ -15,10 +15,22 @@ footer {
   padding: 22px 25px;
   background: #353535;
 }
+@media (min-width: 767px) {
+  footer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
+  }
+}
 footer .footer__logo {
   width: 134px;
   height: 27px;
   margin-bottom: 16px;
+}
+@media (min-width: 767px) {
+  footer .footer__logo {
+    width: 110px;
+  }
 }
 footer .footer__navigation {
   list-style: none;
@@ -27,6 +39,13 @@ footer .footer__navigation {
   gap: 7px;
   font-size: 16px;
   font-weight: 500;
+}
+@media (min-width: 767px) {
+  footer .footer__navigation {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+  }
 }
 footer .footer__navigation__link {
   text-decoration: none;
@@ -43,6 +62,11 @@ footer .footer__navigation__link {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: white;
 }
+@media (min-width: 767px) {
+  .header .header__logo {
+    padding: 30px 40%;
+  }
+}
 .header .header__localisation {
   display: flex;
   flex-direction: row;
@@ -50,9 +74,20 @@ footer .footer__navigation__link {
   padding: 15px 30%;
   font-size: 19px;
 }
+@media (min-width: 767px) {
+  .header .header__localisation {
+    justify-content: center;
+    gap: 17px;
+  }
+}
 
 body {
   background-color: #eaeaea;
+}
+@media (min-width: 767px) {
+  body {
+    background-color: white;
+  }
 }
 
 .loader {
@@ -82,9 +117,6 @@ body {
   animation-duration: 1000ms;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
-}
-.loader .point:nth-of-type(3) {
-  background-color: red;
 }
 .loader .point:nth-of-type(2) {
   background-color: #ae80e5;
@@ -195,11 +227,22 @@ body {
   flex-direction: column;
   gap: 26px;
 }
+@media (min-width: 767px) {
+  .main .main__fonctionnement {
+    padding: 50px 180px;
+  }
+}
 .main .main__fonctionnement .main__fonctionnement__list {
   display: flex;
   flex-direction: column;
   gap: 24.9px;
   padding-left: 12px;
+}
+@media (min-width: 767px) {
+  .main .main__fonctionnement .main__fonctionnement__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 .main .main__fonctionnement .main__fonctionnement__list .main__fonctionnement__list__article {
   position: relative;
@@ -248,10 +291,23 @@ body {
   flex-direction: column;
   gap: 20px;
 }
+@media (min-width: 767px) {
+  .main .main__restaurants {
+    padding: 30px 180px;
+  }
+}
 .main .main__restaurants .main__restaurants__list {
   display: flex;
   flex-direction: column;
   gap: 18px;
+}
+@media (min-width: 767px) {
+  .main .main__restaurants .main__restaurants__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 100px;
+    row-gap: 50px;
+  }
 }
 .main .main__restaurants .main__restaurants__list .main__restaurants__list__article {
   display: flex;
@@ -338,6 +394,11 @@ body {
   padding: 14px 34px;
   box-shadow: none;
 }
+@media (min-width: 767px) {
+  .menu .header .header__logo {
+    padding: 30px 40%;
+  }
+}
 
 @keyframes commande {
   from {
@@ -364,14 +425,20 @@ body {
     transform: translateY(0);
   }
 }
+.main__image {
+  width: 100%;
+  height: 274px;
+  object-fit: cover;
+}
+
 .main {
   width: 100%;
   background: #f6f6f6;
 }
-.main .main__image {
-  width: 100%;
-  height: 274px;
-  object-fit: cover;
+@media (min-width: 767px) {
+  .main {
+    background-color: white;
+  }
 }
 .main .main__menu {
   background: #f6f6f6;
@@ -382,6 +449,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+@media (min-width: 767px) {
+  .main .main__menu {
+    margin: auto 193px;
+  }
 }
 .main .main__menu .main__menu__header {
   display: flex;
