--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,5 +1,4 @@
-
-// déclartion des variables du site 
+// déclartion des variables du site
 $primaire: #9356dc;
 $secondaire: #ff79da;
 $Tertiaire: #99e2d0;
@@ -10,4 +9,4 @@ $Gyey-2: #eaeaea;
 $Grey-tint-4: #7e7e7e;
 $Gradient-bg: linear-gradient(193deg, #9b56dc -11.44%, #ff79da 123.93%);
 
-
+$tailleDesktop: 767px;
