--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -6,7 +6,7 @@
     padding: 14px 106px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 15%);
     background-color: white;
-
+    height: 38px;
     @media (min-width: $tailleDesktop) {
       padding: 30px 40%;
     }
