--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -89,10 +89,10 @@ body {
 
 @-webkit-keyframes loader {
   from {
-    display: flex;
+    -webkit-display: flex;
   }
   to {
-    display: none;
+    -webkit-display: none;
   }
 }
 
