--- a/assets/style.css
+++ b/assets/style.css
@@ -100,10 +100,6 @@ body {
   animation-delay: 2s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
-  -webkit-animation: loader;
-  -webkit-animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  -webkit-animation-timing-function: ease-in-out;
 }
 .loader .point {
   width: 20px;
@@ -173,18 +169,10 @@ body {
 }
 @keyframes loader {
   from {
-    display: flex;
+    visibility: visible;
   }
   to {
-    display: none;
-  }
-}
-@-webkit-keyframes loader {
-  from {
-    -webkit-display: flex;
-  }
-  to {
-    -webkit-display: none;
+    visibility: hidden;
   }
 }
 .main {
