--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -18,10 +18,6 @@ body {
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 
-  -webkit-animation: loader;
-  -webkit-animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  -webkit-animation-timing-function: ease-in-out;
 
   .point {
     width: 20px;
@@ -76,21 +72,14 @@ body {
 
 @keyframes loader {
   from {
-    display: flex;
+    visibility: visible;
   }
   to {
-    display: none;
+    visibility: hidden;
   }
 }
 
-@-webkit-keyframes loader {
-  from {
-    -webkit-display: flex;
-  }
-  to {
-    -webkit-display: none;
-  }
-}
+
 
 .main {
   @include flex(column);
