--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -6,6 +6,8 @@
     padding: 16px 40%;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 15%);
     background-color: white;
+    height: auto;
+    object-fit: contain;
     @media (min-width: $tailleDesktop) {
       padding: 30px 36%;
     }
