--- a/assets/style.css
+++ b/assets/style.css
@@ -58,7 +58,7 @@ footer .footer__navigation__link {
   justify-content: center;
 }
 .header .header__logo {
-  padding: 16px 40%;
+  padding: 4% 40%;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: white;
   height: auto;
