--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,26 +1,35 @@
 .header {
-  @include flex(column);
+  @include flex(row);
+  align-items: center;
   justify-content: center;
+  gap: 42px;
+  padding: 0 17px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  background: white;
 
   .header__logo {
-    padding: 2% 40%;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 15%);
-    background-color: white;
-    height: 30px;
-    object-fit: contain;
+    width: 162px;
+    padding: 14px 34px;
+    box-shadow: none;
     @media (min-width: $tailleDesktop) {
-      padding: 30px 36%;
-    }
-  }
-
-  .header__localisation {
-    @include flex(row);
-    justify-content: space-between;
-    padding: 15px 30%;
-    font-size: 19px;
-    @media (min-width: $tailleDesktop) {
-      justify-content: center;
-      gap: 17px;
+      padding: 30px 40%;
     }
   }
 }
+
+.menu .header{
+  justify-content: flex-start;
+}
+
+.header__localisation {
+  @include flex(row);
+  justify-content: space-between;
+  padding: 15px 30%;
+  font-size: 19px;
+  @media (min-width: $tailleDesktop) {
+    justify-content: center;
+    gap: 17px;
+  }
+}
+
+
