--- a/assets/style.css
+++ b/assets/style.css
@@ -509,6 +509,7 @@ body {
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main:hover + .main__menu__commande__article__aside, .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main:active + .main__menu__commande__article__aside {
   margin-right: 0;
+  -webkit-margin-collapse: 0;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside {
   background-color: #99e2d0;
@@ -518,6 +519,7 @@ body {
   justify-content: center;
   margin-right: -46px;
   transition: margin-right 300ms ease-in-out;
+  -webkit-transition: margin-right 300ms ease-in-out;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside i {
   color: white;
