--- a/sass/base/style.scss
+++ b/sass/base/style.scss
@@ -11,10 +11,44 @@
   font-weight: 700;
 }
 
-
 .truncate {
   width: 90%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.favoris {
+  font-size: 30px;
+  .favoris__icon {
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    -webkit-text-stroke: 2px white;
+
+    &--color {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      background: linear-gradient($primaire, $secondaire);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      opacity: 0;
+      transform: scale(0);
+      transition: 0.3s ease;
+    }
+
+    &:hover .favoris__icon--color {
+      transform: scale(1);
+      opacity: 1;
+    }
+
+    &:hover {
+      background: linear-gradient($primaire, $secondaire);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke: 0px white;
+    }
+  }
 }
