--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -5,7 +5,7 @@ $Tertiaire: #99e2d0;
 $Background-gray: #f6f6f6;
 $Green-font: #008766;
 $Grey: #353535;
-$Gyey-2: #eaeaea;
+$Grey-2: #eaeaea;
 $Grey-tint-4: #7e7e7e;
 $Gradient-bg: linear-gradient(193deg, #9b56dc -11.44%, #ff79da 123.93%);
 
