--- a/sass/pages/menu.scss
+++ b/sass/pages/menu.scss
@@ -129,7 +129,6 @@
           @include flex(column);
           justify-content: center;
           margin-right: -46px;
-          -webkit-transition: margin 300ms ease-in-out;
           transition: margin 300ms ease-in-out;
 
           i {
@@ -145,7 +144,7 @@
         .main__menu__commande__article__detail {
           @include flex(row);
           justify-content: space-between;
-          font-size: 15x;
+          font-size: 15px;
           margin-top: 5px;
 
           .main__menu__commande__article__detail__description {
