--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@
 }
 
 .truncate {
-  width: 90%;
+  width: 85%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -541,7 +541,7 @@ body {
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside i {
   color: white;
 }
-.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__title {
+.main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__title truncate {
   font-size: 18px;
   font-weight: 500;
 }
@@ -557,6 +557,7 @@ body {
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__detail .main__menu__commande__article__detail__prix {
   font-weight: 700;
+  width: 15%;
 }
 .main .main__menu .main__menu__button {
   height: 50px;
